--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid 19 situation</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> -->
+    <title>Covid-19 Situation</title>
+    <link rel="shortcut icon" type="image/png" href="https://www.ameslab.gov/sites/default/files/styles/medium/public/inline-images/Icon_MaskMan.png?itok=iV8kWMc8" />
+
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -167,14 +169,19 @@
         </ul>
 
     </div>
+    <div class="pageload">
+        <span class="loader"><span class="loader-inner"></span></span>
+        <label for="check"></label>
+    </div>
 
-    <label for="check"></label>
 </body>
+
+
 <script src="mainjs.js"></script>
-<!-- <script>
-    document.getElementById('#search').addEventListener('change', function() {
-        console.log('You selected: ', this.value);
-    });
-</script> -->
+<script>
+    $(window).on("load", function() {
+        $(".load-wrapper").fadeOut("slow");
+    })
+</script>
 
 </html>
